# VVERSimulator

./: CMakeLists.txt  Makefile  README.md  build.bat  build_and_run.bat  imgui.ini  main.cpp  main_vert.cpp.bkp  netserver.h  outils.h  picontroller.h  reactor.cpp  reactor.h  run.bat
VVER_Remote/: vver_remoto.py
img/: pwr-hi-res-vver.xcf
